--- a/MauiFlix/Categorias/documentario.xaml
+++ b/MauiFlix/Categorias/documentario.xaml
@@ -2,11 +2,45 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MauiFlix.documentario"
-             Title="documentario">
+             Title="documentario"
+             BackgroundColor="Black">
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <Style TargetType="ImageButton" x:Key="btnfilm">
+                <Setter Property="HorizontalOptions" Value="Fill"/>
+                <Setter Property="VerticalOptions" Value="FillAndExpand"/>
+                <Setter Property="CornerRadius" Value="5"/>
+                <Setter Property="BackgroundColor" Value="Transparent"/>
+            </Style>
+        </ResourceDictionary>
+    </ContentPage.Resources>
     <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+        <ScrollView>
+            <Grid RowDefinitions="300,300,300"
+              ColumnDefinitions="*,*"
+              Padding="5"
+              ColumnSpacing="2"
+              RowSpacing="2">
+                <ImageButton Aspect="AspectFill" Grid.Column="0" Grid.Row="0" x:Name="nossoplanetabtnfiml"
+                         Style="{StaticResource btnfilm}"
+                         Source="nossoplaneta.jpg"
+                         Clicked="nossoplanetabtnfiml_Clicked"/>
+                <ImageButton Aspect="AspectFill" Grid.Column="1" Grid.Row="0" x:Name="einsteinbtnfiml"
+                         Style="{StaticResource btnfilm}"
+                         Source="einstein.jpg"
+                         Clicked="einsteinsbtnfiml_Clicked"/>
+                <ImageButton Aspect="AspectFill" Grid.Column="0" Grid.Row="1" x:Name="vovozonabtnfiml"
+                         Style="{StaticResource btnfilm}"
+                         Source="vovozona.jpg"
+                         Clicked="vovozonabtnfiml_Clicked"/>
+                <ImageButton Aspect="AspectFill" Grid.Column="1" Grid.Row="1" x:Name="anjosbtnfiml"
+                         Style="{StaticResource btnfilm}"
+                         Source="anjos_lei.jpg"
+                         Clicked="anjosbtnfiml_Clicked"/>
+
+
+            </Grid>
+        </ScrollView>
+
     </VerticalStackLayout>
 </ContentPage>
